--- a/style.css
+++ b/style.css
@@ -1,4 +1,108 @@
 body {
     background-image: url(assets/ct-redeye-millennial-travel-trends-20170224\ 2.jpg);
+    background-size: cover;
+    min-height: 100%;
+    background-size: cover;
+    background-attachment: fixed; 
     width: 100%;
+}
+
+.nav-link:hover {
+   background-color: rgb(255, 0, 0);
+}
+
+.nav-item mr-5 {    
+}
+
+.active {
+    background-color: rgb(0, 0, 0);
+}
+
+#questions{
+    font: bold;
+    color: rgb(255, 255, 255);
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 10px;
+    /* background-color: #2196F3; */
+    padding: 10px;
+}
+
+.grid-container>div {
+    /* background-color: rgba(255, 255, 255, 0.8); */
+    text-align: center;
+    padding: 20px 0;
+    font-size: 30px;
+}
+
+.topnav a:hover {
+    background-color: #ddd;
+    color: blue;
+}
+
+.item1 {
+    grid-column-start: 1;
+    grid-column-end: 7;
+}
+
+/* item 2 will be reserved only for personalize.html */
+/* .item2 {
+    grid-column-start: 5;
+    grid-column-end: 7;
+} */
+
+.item3 {
+    background-color: rgba(255, 255, 255, 0.2);
+    color: blue;
+    grid-column-start: 1;
+    grid-column-end: 7;
+}
+
+.item4 {
+    grid-column-start: 1;
+    grid-column-end: 7;
+}
+
+.item5 {
+    grid-column-start: 1;
+    grid-column-end: 7;
+}
+
+.item6 {
+    background-color: rgba(255, 255, 255, 0.6);
+    grid-column-start: 1;
+    grid-column-end: 4;
+}
+
+.item7 {
+    background-color: rgba(255, 255, 255, 0.6);
+    grid-column-start: 4;
+    grid-column-end: 7;
+}
+
+.item8 {
+    background-color: rgba(255, 255, 255, 0.3);
+    grid-column-start: 1;
+    grid-column-end: 7;
+}
+.item9 {
+    background-color: rgba(255, 255, 255, 0.5);
+    grid-column-start: 1;
+    grid-column-end: 7;
+}
+
+h1 {
+    color: blue;
+}
+
+.footer {
+    text-align: center;
+    width: 100%;
+    font-size: 30%;
+    background-color: rgba(255, 255, 255, 0.9);
+    /* padding: 10px; */
+    position: fixed; bottom: 0px;
 }
